# work-clock

./: CMakeLists.txt  README.md
include/: work-timer.hh
src/: main.cc  work-timer.cc
